# architecture-ng

./: Cargo.toml  README.md
firmware/: Cargo.toml
firmware/src/: main.rs
peripheral-traits/: Cargo.toml
peripheral-traits/src/: lib.rs
stm32-hal/: Cargo.toml
stm32-hal/src/: crc.rs  lib.rs  rcc.rs
stm32-pal/: Cargo.toml
stm32-pal/src/: lib.rs  stm32f0x2.rs
stm32-peripherals/: Cargo.toml
stm32-peripherals/src/: lib.rs  stm32f0x2.rs
stm32-ral/: Cargo.toml
stm32-ral/src/: lib.rs
stm32-ral/src/stm32f0/: mod.rs  stm32f0x2.rs
stm32-ral/src/stm32f0/instances/: crc.rs  gpio.rs  mod.rs
